@@ -1,3 +1,9 @@
+2018-04-28  Stefun Br\"uns  <stefan.bruens@rwth-aachen.de>
+
+	* pngimage.c: Fix a bug which causes a segfault with 1/2/4-bit
+	transparent indexed PNGs.
+	* configure.ac: Version 20180428.
+
 2018-03-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* xbb.c: Remove unused lines.
